Fixes dark mode toggle button

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: flex-start;
   width: inherit;
   @include margin-top(1.8);
   @include margin-bottom(2.5);
